Fix whitespace in OpenID/OAuth setting help text

--- a/sass/routes/_admin-console.scss
+++ b/sass/routes/_admin-console.scss
@@ -183,6 +183,10 @@
             }
         }
 
+        .help-text {
+            white-space: pre-line;
+        }
+
         .form-group {
             margin-bottom: 25px;
 
